# 15721-s24-cache-benchmark

./: .gitignore  Cargo.toml  README.md  generate_bench_files.sh  pqt_file_list.txt  pqt_file_list_clean.txt
.github/workflows/: benchmark_group_1.yml  benchmark_group_2.yml  benchmark_group_2_local_client.yml  benchmark_group_2_multi.yml  benchmark_group_2_multi_client.yml  benchmark_same_ec2.yml  benchmark_same_ec2_group_1.yml  test_group_1.yml
scripts/: parse_log.py
src/: benchmark.rs  lib.rs  main.rs  utils.rs
traces/: trace1.csv  trace_100m.csv  trace_100m_1.csv  trace_100m_2.csv  trace_100m_3.csv  trace_100m_long.csv  trace_10m.csv  trace_1m.csv  trace_1m_parallel.csv  trace_parallel.csv  trace_repeat.csv  trace_serial.csv
