[package]
name = "client-benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = "3"
anyhow = "1.0"
parquet = "50.0.0"
arrow = "50.0.0"
log = "0.4"
thiserror = "1.0"
env_logger = "0.11.1"
async-trait = "0.1"
rocket = { version = "0.5.0", features = ["json"] }
reqwest = { version = "0.11", features = ["stream", "json"] }
csv = "1.3.0"
istziio-client = "0.1.9"
parpulse-client = "0.1.5"
prettytable-rs = "0.10.0"
